working inventory tracking

--- a/inventory/templates/inventory/report.html
+++ b/inventory/templates/inventory/report.html
@@ -24,6 +24,7 @@
                     <option>Job Cost</option>
                     <option>Items In</option>
                     <option>Items Out</option>
+                    <option>Stock</option>
                 </select>
                 <div class="input-daterange" id="datepicker">
                     <input id="start-date" type="text" class="input-small" name="start" />
