admin entry form for incoming and outgoing items

--- a/inventory/templates/inventory/order.html
+++ b/inventory/templates/inventory/order.html
@@ -1,40 +1,24 @@
-<!DOCTYPE html>
-{% load dajaxice_templatetags %}
-<html>
-    <head>
-        <link href="/static/style/bootstrap.min.css" rel="stylesheet" media="screen">
-        <link href="/static/style/main.css" rel="stylesheet" media="screen">
-        
-        <title>New Order</title>
+{% extends "inventory/base.html" %}
 
-        <script src="/static/script/js/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="{{STATIC_URL}}dajax/jquery.dajax.core.js"></script>
-        <script src="/static/script/js/bootstrap.min.js"></script>
-        <script src="/static/script/js/order.js"></script>
-        {% if request.user.is_active and request.user.is_staff %}
-        <script src="/static/script/js/order-admin.js"></script>
-        {% endif %}
-        {% dajaxice_js_import %}
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="span5">
-                    {% if request.user.is_active and request.user.is_staff %}
-                    <div id="admin">
-                        <h3>Select employee</h3>
-                        <input id="employee-search" autocomplete="off" class="input-large" type="text" name="query" placeholder="Type to search">
-                        <div id="employee-results"></div>
-                        <h3>Select job</h3>
-                        <input id="job-search" autocomplete="off" class="input-large" type="text" name="query" placeholder="Type to search">
-                        <div id="job-results"></div>
-                    </div>
-                    {% endif %}
-                    <h3>Add items to order</h3>
-                    <input id="item-search" autocomplete="off" class="input-large" type="text" name="query" placeholder="Type to search">
-                    <div id="item-results"></div>
-                </div>
-                <div class="span6 offset1">
+{% block title %}New Order{% endblock %}
+
+{% block custom_js %}
+    <script src="/static/script/js/order.js"></script>
+    {% block admin_js %}{% endblock %}
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <div class="row">
+            {% block pre-content %}{% endblock %}
+            <div class="span5">
+                {% block admin_html %}{% endblock %}
+                <h3>Add items to order</h3>
+                <input id="item-search" autocomplete="off" class="input-large" type="text" name="query" placeholder="Type to search">
+                <div id="item-results"></div>
+            </div>
+            <div class="span6 offset1">
+                <div id="order-info">
                     <h1>Order</h1>
                     <table class="table table-condensed">
                         <tr>
@@ -46,13 +30,15 @@
                             <td><input id="job-name" type="text"></td>
                         </tr>
                     </table>
-                    <h3>Items</h3>
-                    <div id="pending-order"></div>
+                </div>
+                <h3>Items</h3>
+                <div id="pending-order"></div>
+                <div id="message-area">
                     <h3>Message</h3>
                     <div id="message"></div>
-                    <button id="submit-order" class="btn btn-large btn-primary right">Submit Order</button>
                 </div>
+                <button id="submit-order" class="btn btn-large btn-primary right">{% block submit-text %}Submit Order{% endblock %}</button>
             </div>
         </div>
-    </body>
-</html>
+    </div>
+{% endblock %}
