--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -4,6 +4,7 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link href="/static/style/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="/static/style/main.css" rel="stylesheet" media="screen">
 
