adding paging to item table, stock cannot fall below 0

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -15,6 +15,7 @@
         <script src="/static/script/js/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="{{STATIC_URL}}dajax/jquery.dajax.core.js"></script>
         <script src="/static/script/js/bootstrap.min.js"></script>
+        <script src="/static/script/js/oneSimpleTablePaging-1.0.js"></script>
 
         {% block custom_js %}{% endblock %}
 
