fixed delete single order bug

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -12,7 +12,7 @@
 
 {% block nav-global %}
 <ul class="inline">
-    <li><h3><a href="/report">Report</a></h3></li>
-    <li><h3><a href="/entry">New entry</a></h3></li>
+    <li><h3><a target="_blank" href="/report">Report</a></h3></li>
+    <li><h3><a target="_blank" href="/entry">New entry</a></h3></li>
 </ul>
 {% endblock %}
